packages/bff-wasm/fixtures/errors/cannot-serialize-chain/types1.ts
import { B2 } from "./types2";

export type B3 = {
  B2: B2;
};
